add imgs to dir

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <img src="" alt="">
+    <img src="img/george.png" alt="">
     <h1>George U. Acosta</h1>
     <h3>Portfolio</h3>
 
