add first set of anchor tag links

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <p>A compilation of my coding projects</p>
 
     <h2>Past Projects</h2>
-    <p>Brief summary</p>
+    <p>In my Epicodus course I have completed several small coding projects.</p>
+    <p><em> Please see a few examples below</em>:</p>
       <ul>
-        <li>***</li>
-        <li>***</li>
-        <li>***</li>
-        <li>***</li>
+        <li><a href="https://github.com/GACOSTA1988/vacation.git">Vacation</a></li>
+        <li><a href="https://github.com/GACOSTA1988/1st-week.git">1st Week</a></li>
+        <li><a href="https://github.com/GACOSTA1988/branching-test-project.git">Branching Test</a></li>
       </ul>
 
     <h2>About Me</h2>
@@ -47,20 +47,20 @@
     <p>basic info about about personal life</p>
 
     <h3>Interests/hobbies</h3>
-    <ul>
+    <ol>
       <li>***</li>
       <li>***</li>
       <li>***</li>
       <li>***</li>
-    </ul>
+    </ol>
 
     <h3>Skills</h3>
-    <ul>
+    <ol>
       <li>***</li>
       <li>***</li>
       <li>***</li>
       <li>***</li>
-    </ul>
+    </ol>
 
     <h3>My future goals</h3>
     <p>brief info on future goals</p>
