add George info to all portfolio sections

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <h2>Past Projects</h2>
     <p>In my Epicodus course I have completed several small coding projects.</p>
-    <p><em> Please see a few examples below</em>:</p>
+    <p><em> Please see a few examples links below</em>:</p>
       <ul>
         <li><a href="https://github.com/GACOSTA1988/vacation.git">Vacation</a></li>
         <li><a href="https://github.com/GACOSTA1988/1st-week.git">1st Week</a></li>
@@ -24,46 +24,49 @@
       </ul>
 
     <h2>About Me</h2>
-    <p>brief background info Education/work</p>
+    <p></p>
 
     <h3>Work history</h3>
     <ul>
-      <li>***</li>
-      <li>***</li>
-      <li>***</li>
+      <li><strong>Gexpro Services</strong></li>
+      <p>Program Manager<br>2017 to 2019</p>
+      <li><strong>Lanier</strong></li>
+      <p>Operations Manager<br>2013 to 2017</p>
+      <li><strong>Fitness 19</strong></li>
+      <p>Personal Trainer <br>2014 to 2017</p>
     </ul>
 
     <h3>Education</h3>
     <p>Current Education/basic info on my Epicodus</p>
 
     <ul>
-      <li>college</li>
-      <p>details?</p>
-      <li>college</li>
-      <p>details?</p>
+      <li><strong>California State University Long Beach</strong></li>
+      <p>Bachelors of Science in Business Administration><br>2014 to 2016</p>
+      <li><strong>Long Beach City College</strong></li>
+      <p>Associates Degree in Business Management <br>2012 to 2014</p>
     </ul>
 
     <h2>My Story</h2>
-    <p>basic info about about personal life</p>
+    <p>My life has been filled with many instances of accomplishments and failures. All of them have helped develop the person I am. As a first generation Latino College graduate, I'm extremely happy and fortunate to be where I am today.</p>
 
     <h3>Interests/hobbies</h3>
     <ol>
-      <li>***</li>
-      <li>***</li>
-      <li>***</li>
-      <li>***</li>
+      <li>Surfing</li>
+      <li>Snowboarding</li>
+      <li>Jiu Jiutsu</li>
+      <li>Cooking</li>
     </ol>
 
     <h3>Skills</h3>
     <ol>
-      <li>***</li>
-      <li>***</li>
-      <li>***</li>
-      <li>***</li>
+      <li>Emotional intellegence</li>
+      <li>Great communication skills</li>
+      <li>resourcefull</li>
+      <li>Leadership</li>
     </ol>
 
     <h3>My future goals</h3>
-    <p>brief info on future goals</p>
+    <p>After completing Epicodus I plan to seek career opportunities in the tech industry. I' still unclear of unclear of what my primary focus of programing will be but I hope to find my path the end of the program.</p>
 
 
 
