--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </ul>
 
     <h3>Education</h3>
-    <p>Current Education/basic info on my Epicodus</p>
+    <p>I'm currently enrolled in <span class="Epicodus"><a href="https://www.epicodus.com/">Epicodus</a></span> and to complete the program in May 2020.<br>I also hold the following degrees</p>
 
     <ul>
       <li><strong>California State University Long Beach</strong></li>
@@ -66,7 +66,7 @@
     </ol>
 
     <h3>My future goals</h3>
-    <p>After completing Epicodus I plan to seek career opportunities in the tech industry. I' still unclear of unclear of what my primary focus of programing will be but I hope to find my path the end of the program.</p>
+    <p>After completing <span class="Epicodus"><a href="https://www.epicodus.com/">Epicodus</a></span> I plan to seek career opportunities in the tech industry. I'm still unclear of unclear of what my primary focus of programing will be but I hope to find my path the end of the program.</p>
 
 
 
