center pic and add classes/ids

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   </head>
   <body>
 
+    <div class="container">
+    <div class="pic">  
     <img src="img/george.png" alt="">
-    <h1>George U. Acosta</h1>
+    </div>
+    <h1 id="myname">George U. Acosta</h1>
+
     <h3>Portfolio</h3>
 
-    <p>A compilation of my coding projects</p>
+    <p><em>A compilation of my coding projects</em></p>
 
     <h2>Past Projects</h2>
     <p>In my Epicodus course I have completed several small coding projects.</p>
@@ -24,9 +28,9 @@
       </ul>
 
     <h2>About Me</h2>
-    <p></p>
+    <p id="undertext">A look into my work history, Education, and personal life.</p>
 
-    <h3>Work history</h3>
+    <h3>Work History</h3>
     <ul>
       <li><strong>Gexpro Services</strong></li>
       <p>Program Manager<br>2017 to 2019</p>
@@ -37,7 +41,9 @@
     </ul>
 
     <h3>Education</h3>
-    <p>I'm currently enrolled in <span class="Epicodus"><a href="https://www.epicodus.com/">Epicodus</a></span> and to complete the program in May 2020.<br>I also hold the following degrees</p>
+    <p>I'm currently enrolled in <span class="Epicodus"><a href="https://www.epicodus.com/">Epicodus</a></span> and to complete the program in May 2020.</p>
+
+    <p id="undertext">I also hold the following degrees:</p>
 
     <ul>
       <li><strong>California State University Long Beach</strong></li>
@@ -49,6 +55,8 @@
     <h2>My Story</h2>
     <p>My life has been filled with many instances of accomplishments and failures. All of them have helped develop the person I am. As a first generation Latino College graduate, I'm extremely happy and fortunate to be where I am today.</p>
 
+    <p id="undertext">Here is a brief list of several hobbies that I'm fortunate to experience:</p>
+
     <h3>Interests/hobbies</h3>
     <ol>
       <li>Surfing</li>
@@ -56,6 +64,8 @@
       <li>Jiu Jiutsu</li>
       <li>Cooking</li>
     </ol>
+
+    <p id="undertext">Here is a brief list of my skills:</p>
 
     <h3>Skills</h3>
     <ol>
@@ -70,5 +80,6 @@
 
 
 
+  </div>
   </body>
 </html>
