centered img, add container, add borders

--- a/index.html
+++ b/index.html
@@ -9,77 +9,78 @@
   <body>
 
     <div class="container">
-    <div class="pic">  
-    <img src="img/george.png" alt="">
+      <img src="img/george.png" alt="Picture of george" class="picborder" height="350%" width="5%">
+      <h1 id="myname">George U. Acosta</h1>
     </div>
-    <h1 id="myname">George U. Acosta</h1>
 
-    <h3>Portfolio</h3>
 
-    <p><em>A compilation of my coding projects</em></p>
+    <div class="container">
+      <h3>Portfolio</h3>
 
-    <h2>Past Projects</h2>
-    <p>In my Epicodus course I have completed several small coding projects.</p>
-    <p><em> Please see a few examples links below</em>:</p>
+      <p><em>A compilation of my coding projects</em></p>
+
+      <h2>Past Projects</h2>
+      <p>In my Epicodus course I have completed several small coding projects.</p>
+      <p><em> Please see a few examples links below</em>:</p>
       <ul>
         <li><a href="https://github.com/GACOSTA1988/vacation.git">Vacation</a></li>
         <li><a href="https://github.com/GACOSTA1988/1st-week.git">1st Week</a></li>
         <li><a href="https://github.com/GACOSTA1988/branching-test-project.git">Branching Test</a></li>
       </ul>
 
-    <h2>About Me</h2>
-    <p id="undertext">A look into my work history, Education, and personal life.</p>
+      <h2>About Me</h2>
+      <p id="undertext">A look into my work history, Education, and personal life.</p>
 
-    <h3>Work History</h3>
-    <ul>
-      <li><strong>Gexpro Services</strong></li>
-      <p>Program Manager<br>2017 to 2019</p>
-      <li><strong>Lanier</strong></li>
-      <p>Operations Manager<br>2013 to 2017</p>
-      <li><strong>Fitness 19</strong></li>
-      <p>Personal Trainer <br>2014 to 2017</p>
-    </ul>
+      <h3>Work History</h3>
+      <ul>
+        <li><strong>Gexpro Services</strong></li>
+          <p>Program Manager<br>2017 to 2019</p>
+        <li><strong>Lanier</strong></li>
+          <p>Operations Manager<br>2013 to 2017</p>
+        <li><strong>Fitness 19</strong></li>
+          <p>Personal Trainer <br>2014 to 2017</p>
+        </ul>
 
-    <h3>Education</h3>
-    <p>I'm currently enrolled in <span class="Epicodus"><a href="https://www.epicodus.com/">Epicodus</a></span> and to complete the program in May 2020.</p>
+      <h3>Education</h3>
+      <p>I'm currently enrolled in <span class="Epicodus"><a href="https://www.epicodus.com/">Epicodus</a></span> and to complete the program in May 2020.</p>
 
-    <p id="undertext">I also hold the following degrees:</p>
+      <p id="undertext">I also hold the following degrees:</p>
 
-    <ul>
-      <li><strong>California State University Long Beach</strong></li>
-      <p>Bachelors of Science in Business Administration><br>2014 to 2016</p>
-      <li><strong>Long Beach City College</strong></li>
-      <p>Associates Degree in Business Management <br>2012 to 2014</p>
-    </ul>
+      <ul>
+        <li><strong>California State University Long Beach</strong></li>
+          <p>Bachelors of Science in Business Administration><br>2014 to 2016</p>
+        <li><strong>Long Beach City College</strong></li>
+          <p>Associates Degree in Business Management <br>2012 to 2014</p>
+        </ul>
 
-    <h2>My Story</h2>
-    <p>My life has been filled with many instances of accomplishments and failures. All of them have helped develop the person I am. As a first generation Latino College graduate, I'm extremely happy and fortunate to be where I am today.</p>
+      <h2>My Story</h2>
+      <p>My life has been filled with many instances of accomplishments and failures. All of them have helped develop the person I am. As a first generation Latino College graduate, I'm extremely happy and fortunate to be where I am today.</p>
 
-    <p id="undertext">Here is a brief list of several hobbies that I'm fortunate to experience:</p>
+      <p id="undertext">Here is a brief list of several hobbies that I'm fortunate to experience:</p>
 
-    <h3>Interests/hobbies</h3>
-    <ol>
-      <li>Surfing</li>
-      <li>Snowboarding</li>
-      <li>Jiu Jiutsu</li>
-      <li>Cooking</li>
-    </ol>
+      <h3>Interests/hobbies</h3>
+      <ol>
+        <li>Surfing</li>
+        <li>Snowboarding</li>
+        <li>Jiu Jiutsu</li>
+        <li>Cooking</li>
+      </ol>
 
-    <p id="undertext">Here is a brief list of my skills:</p>
+      <p id="undertext">Here is a brief list of my skills:</p>
 
-    <h3>Skills</h3>
-    <ol>
-      <li>Emotional intellegence</li>
-      <li>Great communication skills</li>
-      <li>resourcefull</li>
-      <li>Leadership</li>
-    </ol>
+      <h3>Skills</h3>
+      <ol>
+        <li>Emotional intellegence</li>
+        <li>Great communication skills</li>
+        <li>resourcefull</li>
+        <li>Leadership</li>
+      </ol>
 
-    <h3>My future goals</h3>
-    <p>After completing <span class="Epicodus"><a href="https://www.epicodus.com/">Epicodus</a></span> I plan to seek career opportunities in the tech industry. I'm still unclear of unclear of what my primary focus of programing will be but I hope to find my path the end of the program.</p>
+      <h3>My future goals</h3>
+      <p>After completing <span class="Epicodus"><a href="https://www.epicodus.com/">Epicodus</a></span> I plan to seek career opportunities in the tech industry. I'm still unclear of unclear of what my primary focus of programing will be but I hope to find my path the end of the program.</p>
 
 
 
-  </div>
+    </div>
   </body>
 </html>
