--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   <body>
 
     <div class="container">
-      <img src="img/george.png" alt="Picture of george" class="picborder" height="350%" width="5%">
+    <div class="border">
+    <div class="jumbotron">
+      <img src="img/george.png" alt="Picture of george" class="pic" height="350%" width="5%">
       <h1 id="myname">George U. Acosta</h1>
     </div>
-
-
-    <div class="container">
+    
       <h3>Portfolio</h3>
-
       <p><em>A compilation of my coding projects</em></p>
+    </div>
+
 
       <h2>Past Projects</h2>
       <p>In my Epicodus course I have completed several small coding projects.</p>
