--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
       <img src="img/george.png" alt="Picture of george" class="pic" height="350%" width="5%">
       <h1 id="myname">George U. Acosta</h1>
     </div>
-    
+
+    <div class="intro">  
       <h3>Portfolio</h3>
       <p><em>A compilation of my coding projects</em></p>
+    </div>
     </div>
 
 
