updated headers font

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h1 id="myname">George U. Acosta</h1>
     </div>
 
-    <div class="intro">  
-      <h3>Portfolio</h3>
+    <div class="intro">
+      <h3 id="introfont">Portfolio</h3>
       <p><em>A compilation of my coding projects</em></p>
     </div>
     </div>
