add card to subsections

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
       </div>
 
 
-      <h2>Past Projects</h2>
+      <div class="container">
+      <div class="card">
+      <div class="card-heading">
+
+
+      <h2 class="card-title">Past Projects</h2>
+    </div>
+    <div class="card-body">
+
       <p>In my Epicodus course I have completed several small coding projects.</p>
       <p><em> Please see a few examples links below</em>:</p>
         <ul>
@@ -30,12 +38,21 @@
           <li><a href="https://github.com/GACOSTA1988/1st-week.git">1st Week</a></li>
           <li><a href="https://github.com/GACOSTA1988/branching-test-project.git">Branching Test</a></li>
         </ul>
+      </div>
+    </div>
+  </div>
 
-      <h2>About Me</h2>
+
+  <div class="container">
+  <div class="card">
+  <div class="card-heading">
+
+      <h2 class="card-title">About Me</h2>
+    </div>
         <p id="undertext">A look into my work history, Education, and personal life.</p>
 
       <h3>Work History</h3>
-        < ul>
+        <ul>
           <li><strong>Gexpro Services</strong></li>
             <p>Program Manager<br>2017 to 2019</p>
           <li><strong>Lanier</strong></li>
@@ -55,8 +72,16 @@
           <li><strong>Long Beach City College</strong></li>
             <p>Associates Degree in Business Management <br>2012 to 2014</p>
         </ul>
+      </div>
+      </div>
 
-      <h2>My Story</h2>
+      <div class="container">
+      <div class="card">
+      <div class="card-heading">
+
+      <h2 class="card-titles">My Story</h2>
+      </div>
+
         <p>My life has been filled with many instances of accomplishments and failures. All of them have helped develop the person I am. As a first generation Latino College graduate, I'm extremely happy and fortunate to be where I am today.</p>
 
         <p id="undertext">Here is a brief list of several hobbies that I'm fortunate to experience:</p>
@@ -78,10 +103,18 @@
           <li>resourcefull</li>
           <li>Leadership</li>
         </ol>
+      </div>
+      </div>
 
-      <h3>My future goals</h3>
+      <div class="container">
+      <div class="card">
+      <div class="card-heading">
+
+      <h3 class="card-tiltle">My future goals</h3>
+      </div>
         <p>After completing <span class="Epicodus"><a href="https://www.epicodus.com/">Epicodus</a></span> I plan to seek career opportunities in the tech industry. I'm still unclear of unclear of what my primary focus of programing will be but I hope to find my path the end of the program.</p>
-
+      </div>
+      </div>
 
 
     </div>
