add contact info and email anchor

--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
           <p>After completing <span class="Epicodus"><a href="https://www.epicodus.com/">Epicodus</a></span> I plan to seek career opportunities in the tech industry. I'm still unclear of unclear of what my primary focus of programing will be but I hope to find my path the end of the program.</p>
         </div>
       </div>
+      <div class="contact">
+        <h3>Contact info</h3>
+        <p>George Acosta</p>
+        <p>Mobile: 562-316-4822</p>
+        <a href="mailto:georgeacostar@gmail.com">email me!</a>
+      </div>
     </div>
   </body>
 </html>
