add anchor for resume pdf

--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
         <p>George Acosta</p>
         <p>Mobile: 562-316-4822</p>
         <a href="mailto:georgeacostar@gmail.com">email me!</a>
+        <br>
+        <a href="pdf/resume.pdf">My resume</a>
       </div>
     </div>
   </body>
